--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
-filelock==3.12.2
-Jinja2==3.1.2
+ipykernel==6.25.1
+ipython==8.14.0
 joblib==1.3.2
-MarkupSafe==2.1.3
+keras==2.13.1
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
 mpmath==1.3.0
+nest-asyncio==1.5.7
 networkx==3.1
-numpy==1.25.2
+numpy==1.24.3
+oauthlib==3.2.2
+opencv-python==4.8.0.76
+packaging==23.1
+pandas==2.1.0
+pickleshare==0.7.5
 Pillow==10.0.0
 scikit-learn==1.3.0
 scipy==1.11.2
+stack-data==0.6.2
 sympy==1.12
-threadpoolctl==3.2.0
-torch==2.0.1
-torchvision==0.15.2
-tornado==6.3.3
-traitlets==5.9.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-wcwidth==0.2.6
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.33.0
+termcolor==2.3.0
